Fixed the issue of margins being too large for outstanding individual section

--- a/css/style.less
+++ b/css/style.less
@@ -309,6 +309,10 @@ body {
     }
     padding-top: 50px;
     padding-bottom: 100px;
+    position: relative;
+    flex: 1;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 #outstanding-image {
